--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,7 @@
         /*border-radius: 10px;*/
         cursor: pointer;
         font-size: 18px;
-        box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+        box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), 5px 5px 15px rgba(0, 0, 0, 0.3);
         margin: 3px;
         transition-duration: 0.8s;
     }
