--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,8 @@
         outline: none;
         display: inline-block;
         padding: 30px;
-        color: rgba(255, 255, 255, 0.809);
+        color: rgba(255, 255, 255, 0.809)/*rgb(194, 194, 30)*/
+        ;
         background-color: rgb(44, 44, 44);
         text-align: center;
         /*border-radius: 10px;*/
@@ -59,6 +60,16 @@
         margin: 3px;
         transition-duration: 0.8s;
     }
+    /*#ylw {
+        background: rgb(194, 194, 30);
+        color: yellow;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        right: 20px;
+        bottom: 20px;
+    }
+    */
     
     #container {
         display: flex;
@@ -74,6 +85,7 @@
         max-width: 700px;
         max-height: 400px;
         border-radius: 15px;
+        border: 5px solid rgb(194, 194, 30);
     }
     
     img:hover {
