--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -145,8 +145,8 @@ input[type=submit] {
     animation-duration: 0.8s;
     transition-duration: 0.5s;
     animation-play-state: paused;
-    border-bottom: 1px solid rgb(194, 194, 30);
-    border-right: 1px solid rgb(194, 194, 30);
+    border-bottom: 1px solid #262637;
+    border-right: 1px solid #262637;
 }
 
 input[type=submit]:hover {
