--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -157,6 +157,7 @@ input[type=submit]:hover {
     transition-duration: 0.5s;
     padding-left: 25px;
     box-shadow: 0 4px 15px 4px #000000;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .navbar {
