--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -161,6 +161,8 @@ input[type=submit]:hover {
 
 .navbar {
     overflow: hidden;
+    width: 100%;
+    height: 10%;
     background-color: rgb(194, 194, 30);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     /*margin-top: -85%;*/
