useless version updates

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,6 +101,7 @@ img:hover {
     box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset 5px 5px 5px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
     border-radius: 15px;
     margin: 30px;
+    z-index: 2;
 }
 
 #container #card #box img {
@@ -130,6 +131,7 @@ img:hover {
     margin-top: -85%;
     width: 100%;
     height: 80px;
+    z-index: 5;
 }
 
 .navbar a {
