--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,7 +133,7 @@ img:hover {
     margin-top: -85%;
     width: 100%;
     height: 80px;
-    z-index: -5;
+    /*z-index: -5;*/
 }
 
 .navbar a {
