--- a/CSS/about-me.css
+++ b/CSS/about-me.css
@@ -27,3 +27,104 @@ img {
     max-width: 500px;
     box-shadow: rgb(2, 1, 19);
 }
+
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px;
+    margin-top: -10%;
+    margin-left: 70%;
+    /* Remove this if you don't want the 3D effect */
+}
+
+
+/* This container is needed to position the front and back side */
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+    transition-delay: 0.8s;
+}
+
+
+/* Position the front and back side */
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+}
+
+
+/* Style the front side (fallback if image is missing) */
+
+.flip-card-front {
+    background-color: #232427;
+    color: black;
+    border-bottom: 1px solid grey;
+    border-radius: 100%;
+    box-shadow: 3px 7px rgba(14, 13, 13, 0.494);
+}
+
+
+/* Style the back side */
+
+.flip-card-back {
+    background-color: rgb(194, 194, 30);
+    color: white;
+    transform: rotateY(180deg);
+    box-shadow: 5px 10px 18px #000000;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.flip-card-back:hover {
+    border-radius: 20px;
+    transition-duration: 0.8s;
+    animation: ease-in-out;
+    animation-duration: 0.8s;
+}
+
+#Daino:hover {
+    transition-duration: 0.5;
+}
+
+#inquire {
+    background-color: #232427;
+    color: white;
+    font-size: 30px;
+    width: 100%;
+    height: 50%;
+    margin-bottom: -5%;
+    border: none;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    box-shadow: 5px 10px 18px 5px black;
+}
+
+#inquire:hover {
+    background-color: white;
+    color: #232427;
+    transition-duration: 0.5s;
+    animation: ease-in-out;
+    animation-duration: 0.5s;
+}
