--- a/CSS/about-me.css
+++ b/CSS/about-me.css
@@ -58,7 +58,6 @@ img {
 
 .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
-    transition-delay: 0.8s;
 }
 
 
@@ -127,4 +126,88 @@ img {
     transition-duration: 0.5s;
     animation: ease-in-out;
     animation-duration: 0.5s;
+}
+
+.info {
+    background-color: transparent;
+    color: transparent;
+}
+
+.info:hover {
+    background-color: transparent;
+    padding-left: none;
+    width: 100%;
+    height: 100px;
+    border: none;
+    transition-duration: 0.8s;
+    animation: ease-in-out;
+    animation-duration: 0.8s;
+}
+
+#detail {
+    font-family: cursive;
+    size: 20px;
+    color: white;
+    animation: ease-in;
+    animation-duration: 0.8s;
+    animation-delay: 0.8s;
+    align-content: center;
+    padding-left: 45%;
+}
+
+#detail:hover {
+    animation: ease-in-out;
+    animation-duration: 0.8s;
+    color: white;
+}
+
+#perspective1 {
+    perspective: 800px;
+}
+
+.perspective1 {
+    width: 400px;
+    height: 250px;
+    margin-left: 10%;
+    position: fixed;
+    transform: rotateX(40deg) translateZ(8em);
+    transform-style: preserve-3d;
+    perspective: 800px;
+    border-radius: 20px;
+    filter: grayscale(100);
+}
+
+.perspective1:hover {
+    width: 500px;
+    height: 300px;
+    /*margin-left: 5px;*/
+    box-shadow: 5px 15px 8px black;
+    border-radius: 20px;
+    transition-duration: 0.8s;
+    transform: rotateX(0deg) translateZ(0em);
+    animation: ease-in-out;
+    animation-duration: 0.8s;
+    animation-direction: alternate-reverse;
+    filter: grayscale(0);
+}
+
+#rays {
+    margin-left: 800px;
+    margin-top: 300px;
+    width: 275px;
+    height: 300px;
+    max-width: 320px;
+    box-shadow: 5px 15px 8px black;
+    box-sizing: left-padding 20;
+}
+
+#rays:hover {
+    animation: ease-in;
+    transition-duration: 0.8s;
+    animation-duration: 0.8s;
+    box-shadow: ;
+}
+
+#rays video {
+    border: none;
 }
