removed padding Issues
I reduced the margin and padding stye for the overall document which in turn allowed the navbar to reach end of screen size

--- a/CSS/about-me.css
+++ b/CSS/about-me.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 header {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: rgb(194, 194, 30);
@@ -210,4 +216,5 @@ img {
 
 #rays video {
     border: none;
+    filter: drop-shadow();
 }
