--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 header {
     color: rgb(242, 223, 148);
     font-family: cursive;
