--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@ header {
 }
 
 p {
-    font-family: comic sans MS;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     color: rgb(194, 194, 30);
     position: fixed;
