--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 header {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 50px;
-    color: rgb(194, 194, 30);
+    color: white;
     position: fixed;
     left: 10%;
 }
@@ -9,7 +9,7 @@ header {
 p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
-    color: rgb(194, 194, 30);
+    color: white;
     position: fixed;
     animation: ease-in-out 2s;
     transition-duration: 2s;
@@ -48,7 +48,7 @@ body {
     transition-duration: 0.8s;
     animation-play-state: paused;
     position: fixed;
-    margin-top: 90%;
+    margin-top: 50%;
 }
 
 #more:hover {
