--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ body {
     cursor: pointer;
     font-size: 18px;
     /*box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset 5px 5px 5px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);*/
-    margin: 3px;
+    margin-top: 6%;
     background-color: #2a2b2f;
     animation: ease-in-out;
     transition-duration: 0.8s;
