--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,10 +6,18 @@ header {
     left: 10%;
 }
 
+header h1 {
+    font-size: 80px;
+    margin-top: -10%;
+    padding-bottom: 15px;
+}
+
 p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
-    color: white;
+    color: #1e1f23;
+    padding: 15px 25px;
+    background-color: rgba(255, 255, 255, 0.809);
     position: fixed;
     animation: ease-in-out 0.8s;
     transition-duration: 0.8s;
@@ -169,5 +177,5 @@ img:hover {
     /*-webkit-text-stroke: 1px white;*/
     margin-left: 70%;
     font-size: 70px;
-    margin-top: 0%;
+    margin-top: -2%;
 }
